Fixed styling and layout issues, including improvements to the navigation and footer sections, as well as adjustments to the search interface for better user experience.

--- a/html/css/ts_search.css
+++ b/html/css/ts_search.css
@@ -74,14 +74,14 @@
 }
 
 .search-col-left .ais-RangeSlider .rheostat-progress {
-  background: var(--okar-bg-colour));
+  background: var(--okar-bg-1-hover);
   height: 6px;
   top: 0;
   border-radius: 3px;
 }
 
 .search-col-left .ais-RangeSlider .rheostat-handle {
-  background: var(--okar-bg-colour));
+  background: var(--okar-bg-colour-1);
   border: none;
   border-radius: 50%;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
@@ -98,10 +98,10 @@
 }
 
 .search-col-left .ais-RangeSlider .rheostat-tooltip {
-  background: var(--okar-bg-colour);
+  background: var(--okar-bg-colour-1);
   border: none;
   border-radius: 4px;
-  color: var(--okar-fg-colour-2);
+  color: var(--okar-colour-1);
   font-size: 0.75rem;
   font-weight: 600;
   padding: 2px 8px;
@@ -252,23 +252,27 @@
 /* Clear refinements */
 .search-col-left #clear-refinements {
   margin-top: 1rem;
+  display: flex; 
+  justify-content: center ;
 }
 
 .search-col-left .ais-ClearRefinements-button {
-  background: transparent;
-  border: 1px solid white ;/*  var(--okar-button-bg, #0d6efd); */
-  color:var(--okar-fg-colour-2);
-  padding: 0.5rem 1rem;
-  border-radius: 0.5rem;
-  font-size: 0.875rem;
-  cursor: pointer;
-  transition: all 0.15s;
-  width: 100%;
+  display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    height: var(--site-top-action-height);
+    padding: 0 1.50em;
+    border: 0 !important;
+    background-color: var(--okar-bg-colour-1) !important;
+    font-size: 1.25rem;
+    color: var(--bs-white) !important;
+    text-decoration: none;
+    border-radius: 9999px;
 }
 
 .search-col-left .ais-ClearRefinements-button:hover:not(:disabled) {
-  background: var(--okar-bg-colour));
-  color:var(--okar-fg-colour-2);
+    background-color: var(--okar-bg-1-hover) !important;
+    text-decoration: none;
 }
 
 .search-col-left .ais-ClearRefinements-button--disabled {
